more detailed readme2

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Here you will see some code that are used for analysis of composure data (first you need to run composure and then need will need to use this codes). The main code for composure itself  is PhyloParseAlignmentPenta which sits in BIOBITS/src/compousre2.
-Once you had those data (either in comp or ser files) you need  VITERBI3 to find out detect chains from composure posterior profiles. VITERBI3   sits in hmmwithdirichletprior package. Diffrence between VITERBI3 and 2 is that in 2 you will see my own implementation of vitrbi algorithm (without usuing biojava DP tools)  but in VITERBI3 I have used biojava dynamic programming features to implement viterbi, backward, forward and posterior decoding algorithms.
+Here you will see some code that are used for analysis of composure data (first you need to run composure and then  will need to use these codes). The main code for composure itself  is PhyloParseAlignmentPenta which sits in BIOBITS/src/compousre2.
+Once you had those data (either in comp or ser files) you need  VITERBI3 to  detect chains from composure posterior profiles. VITERBI3   sits in hmmwithdirichletprior package. Diffrence between VITERBI3 and 2 is that in 2 you will see my own implementation of vitrbi algorithm (without usuing biojava DP tools)  but in VITERBI3 I have used biojava dynamic programming features to implement viterbi, backward, forward and posterior decoding algorithms.
 
 For visualizing alignments and annotating features in alignment blocks you may want to use value. 
